[package]
name = "plastic_io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
chrono = { version = "0.4.31", features = ["serde"]}
rusty_v8 = "0.32.1"
clap = { version = "4.5.0", features = ["derive"] }
lazy_static = "1.4.0"


